<resources>
    <string name="app_name">Watchr</string>
    <string name="popularity">Popularity</string>
    <string name="rating">Rating</string>
    <string name="favorite">Favorite</string>
    <string name="movie_cover">Movie Cover</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="actor">Cast</string>
    <string name="browse">Browse</string>
    <string name="recommended">Recommended</string>
    <string name="watch_later">Watch Later</string>
    <string name="forgot_password">So you forgot your password? Great....  \n no no its fine don\'t worry about it \n Paying for extra server load is the best thing ever!</string>


    <string name="comment_hint">Enter a comment&#8230;</string>
    <string name="verify_account_text">In order for you to use all user functionality you must verify your account by clicking the link in the email we sent</string>
    <string name="account_features">Functionality includes, custom profile, commenting on movies, rating movies, saving movies to lists</string>
    <string name="resend_verification_email">If you have not received an email, you can click this button to resend it</string>

    <string name="watched">Watched</string>
    <string name="favorites">Favorites</string>
    <string name="comments">Comments</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="example_email">your@email.address</string>
    <string name="example_password">*******************</string>
    <string name="email">Email: %1$s</string>
    <string name="uid">UID: %1$s</string>
    <string name="status">Status: %1$s</string>
    <string name="runtime">Runtime: %1$smin</string>
    <string name="adult">Adult: %1$b</string>
    <string name="language">Language: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="rating_spinner">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="genre_spinner">
        <item>All</item>
        <item>Horror</item>
        <item>Comedy</item>
        <item>Action</item>
        <item>Adventure</item>
        <item>Drama</item>
        <item>Thriller</item>
    </string-array>

    <string-array name="order_by_spinner">
        <item>Popularity</item>
        <item>Rating</item>
        <item>Title</item>
        <item>Release date</item>
    </string-array>

</resources>
