<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/MovieListFragment"
        android:icon="@drawable/ic_browse"
        android:title="@string/browse" />

    <item
        android:id="@+id/recommendedFragment"
        android:icon="@drawable/ic_recommended"
        android:title="@string/recommended" />

    <item
        android:id="@+id/watchedFragment"
        android:icon="@drawable/ic_watched"
        android:title="@string/watched" />

    <item
        android:id="@+id/watchLaterFragment"
        android:icon="@drawable/ic_watch_later"
        android:title="@string/watch_later" />

    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favorites" />

</menu>